# Reportly

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
nodes/: orchestrator.py  synthesizer.py  worker.py
src/: celery_worker.py
src/nodes/: orchestrator.py  synthesizer.py  worker.py
src/schema/: state.py
src/services/pdf/: client.py
src/tasks/: report_task.py
src/tools/: tavily_tool.py
src/utils/: logger.py  model.py  planner.py
src/utils/prompts/: planner_prompt.py  worker_prompt.py
src/workflow/: main.py
state/: state.py
utils/: model.py  planner.py
